# AEMU

./: CMakeLists.txt
AEMU/: CMakeLists.txt
AEMU/include/: AEMU.hpp  Module.hpp  clock.hpp  trace_vcd.hpp
AEMU/src/: AEMU.cpp  Module.cpp  clock.cpp  trace_vcd.cpp
doc/: README.md
example/: CMakeLists.txt
example/include/: Bundle.hpp  IFU.hpp  RAM.hpp  common.hpp  macro.h
example/rtl/: IFU.v  RAM.v  top.v
example/src/: IFU.cpp  RAM.cpp  TraceIFU.cpp  TraceRAM.cpp  main.cpp
include/: IFU.hpp  Module.hpp  RAM.hpp  clock.hpp  config.hpp  macro.h  wavename.hpp
scripts/: trace.py
src/: IFU.cpp  RAM.cpp  clock.cpp  main.cpp  wavename.cpp
